--- a/style2.css
+++ b/style2.css
@@ -83,6 +83,7 @@
     .table{
         border-collapse: collapse;
         max-width: 100%;
+        order:-1;
     }
     tr:nth-child(2n) {
         background-color: rgb(157, 97, 97);
@@ -99,6 +100,7 @@
     .formDiv {
         max-width: 100%;
         background-color: #f8f9fb;
+        order:1;
     }
     .form{
         padding: 2px;
